# property-pipeline

./: .dockerignore  .gitignore  .replit  AI_HANDOFF.md  ARCHITECTURE.md  BACKFILL_PIPE1_property_types.sql  BACKFILL_PIPE2_remove_duplicates.sql  BACKFILL_PIPE4_landlord_id.sql  Dockerfile  ECOSYSTEM.md  Makefile  PIPELINE_PROGRESS.md  PROGRESS.md  README.md  SETUP_SUPABASE.md  STAGES.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  replit.md  start.sh  supabase_backfill_original_data.sql  supabase_migration.sql  supabase_migration_phase3_4.sql  vite.config.js
attached_assets/: Pasted-Here-is-the-full-information-for-the-rental-listing-at-_1781917138286.txt  Pasted-Honest-Assessment-What-the-AI-does-well-today-The-found_1776335622965.txt  Pasted-I-want-us-to-train-the-ai-to-understand-something-there_1776248748203.txt  Pasted-Perform-a-full-system-production-level-audit-of-the-ent_1777170788368.txt  Pasted-The-core-problem-right-now-Your-pipeline-tool-and-your-_1776247647667.txt
backend/: .env.example  .gitignore  main.py  requirements.txt
choice-website/: .replit  404.html  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DEPLOY_PHASE1_GUIDE.md  KNOWN_ISSUES.md  MIGRATION_drop_applications_tables.sql  README.md  REPLIT_SAFETY.md  SECURITY.md  SETUP.md  SETUP.sql  _headers  _redirects  about.html  application-credit-policy.html  fair-housing.html  faq.html  generate-config.js  health.html  holding-deposit-policy.html  how-it-works.html  how-to-apply.html  index.html  landlord-platform-agreement.html  listings.html  manifest.json  privacy.html  replit.md  (+5 more)
(+131 files in other folders)
