[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "homeharvest>=0.8.18",
    "httpx==0.27.0",
    "pillow==10.3.0",
    "pydantic>=2.12.5",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.30",
    "uvicorn[standard]==0.30.1",
]
